--- a/Results/resultsNew.css
+++ b/Results/resultsNew.css
@@ -1,6 +1,6 @@
 body
 {
-    background-image: url('Img/2.png');
+    background-image: url('2.png');
     background-size: cover;
     background-position: center;
     background-repeat: repeat;
