--- a/infoLay.css
+++ b/infoLay.css
@@ -47,10 +47,6 @@
   justify-content: space-between;
 }
 
-.card .card__btns {
-  display: flex;
-  gap: 0.6rem;
-}
 
 .card button {
   border: none;
@@ -66,13 +62,15 @@
   font-family: 'Righteous', cursive;
 }
 
-.card button:hover {
-  opacity: 0.8;
-  transform: scale(0.9);
+
+
+
+
+
+.card__btns {
+  /*display: flex;
+    gap: 0.6rem;*/
 }
-
-
-
 .add-btn {
   color: #fff;
   padding: 0.7em 0.8em;
